--- a/10.Natural_Language_Processing/Day01/ex_cleaning.ipynb
+++ b/10.Natural_Language_Processing/Day01/ex_cleaning.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "## 불용어 제거 : 분석에 의미가 없는 토큰 제거\n",
     "for token in tokens:\n",
-    "# for token in tokens[::-1]: # >> index를 뒤에서부터 가져와야 앞에 지운것 영향 받지 않음.\n",
+    "# for token in tokens[::-1]: # >> index를 뒤에서부터 가져와야지만 앞에 지운것 영향 받지 않음.\n",
     "    if token in english_sw:\n",
     "        # 제거\n",
     "        tokens.remove(token)\n",
