--- a/10.Natural_Language_Processing/Day02/ex_preprocessing.ipynb
+++ b/10.Natural_Language_Processing/Day02/ex_preprocessing.ipynb
@@ -2248,8 +2248,8 @@
     "    else:\n",
     "        # freqsDict[v].append(k)\n",
     "        # freqsDict[v]+=1\n",
-    "        freqsDict[v][1].append(k)\n",
     "        freqsDict[v][0]+=1\n",
+    "        freqsDict[v][1].append(k)\n",
     "print(freqsDict)"
    ]
   },
@@ -4231,7 +4231,6 @@
     "        sent.append(vocab[token])\n",
     "    \n",
     "    # 인코딩 된 문장 저장\n",
-    "    # all_tokens.append(sent) >> ?\n",
     "    encodingData.append(sent)\n",
     "    print(f'==>인코딩: {sent}\\n')"
    ]
@@ -4418,8 +4417,8 @@
    "source": [
     "MAX_LEN = 4\n",
     "a=[1,2,3,4,5,6,7,8]\n",
-    "print(a[:MAX_LEN])\n",
-    "print(a[len(a)-MAX_LEN:])"
+    "print(a[:MAX_LEN]) # 뒷부분 제거 시\n",
+    "print(a[len(a)-MAX_LEN:]) # 앞부분 제거 시"
    ]
   },
   {
