--- a/08.Deeping_Learning(Torch)/Project/loading_weather_model.ipynb
+++ b/08.Deeping_Learning(Torch)/Project/loading_weather_model.ipynb
@@ -315,7 +315,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TORCH_38",
+   "display_name": "NLP_TORCH",
    "language": "python",
    "name": "python3"
   },
