--- a/08.Deeping_Learning(Torch)/Project/weather_spring.ipynb
+++ b/08.Deeping_Learning(Torch)/Project/weather_spring.ipynb
@@ -633,7 +633,7 @@
     }
    ],
    "source": [
-    "make_heatmap(newDF)"
+    "makeaplot.make_heatmap(newDF)"
    ]
   },
   {
@@ -1135,7 +1135,7 @@
     }
    ],
    "source": [
-    "sScale(featureDF)"
+    "ML_preprocessing.sScale(featureDF)"
    ]
   },
   {
