--- a/09.Torch_Image/Project/loading_fruits_model.ipynb
+++ b/09.Torch_Image/Project/loading_fruits_model.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,14 +33,14 @@
     }
    ],
    "source": [
-    "# 경로 지정\n",
-    "import sys\n",
-    "sys.path.append(r'C:\\Users\\KDP-50\\OneDrive\\바탕 화면\\Python06\\MyClass')\n",
-    "\n",
-    "import os\n",
-    "\n",
     "# 모듈 로딩\n",
     "\n",
+    "# 경로 지정 모듈 로딩\n",
+    "import sys\n",
+    "sys.path.append(r'C:\\Users\\KDP-50\\OneDrive\\바탕 화면\\KDT_DYH\\MyClass')\n",
+    "import os\n",
+    "\n",
+    "# 커스텀 모듈 로딩\n",
     "from DL_Modules import *\n",
     "from DL_func import *\n",
     "from DL_Reg_Class import *\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +317,10 @@
     }
    ],
    "source": [
+    "# 모듈 로딩\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# 일반적인 텐서 생성 [H, W, C]\n",
     "cvTensor1= torch.tensor(cv_img)\n",
     "print(f'cvTensor1  : {cvTensor1.shape}, {cvTensor1.ndim}D')\n",
