--- a/09.Torch_Image/Project/OpenCV_project_hun_complete.ipynb
+++ b/09.Torch_Image/Project/OpenCV_project_hun_complete.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch Ver.:2.2.2\n",
-      "pandas Ver.:2.2.1\n",
-      "numpy Ver.:1.26.4\n"
+      "torch Ver.:2.4.1\n",
+      "pandas Ver.:2.0.3\n",
+      "numpy Ver.:1.24.3\n"
      ]
     }
    ],
@@ -68,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## 데이터 관련 설정\n",
-    "# IMG_PATH = './image/apple/Apple_remove/'\n",
-    "# IMG_FILE = IMG_PATH+'FreshApple (1).jpg'\n",
+    "IMG_PATH = './image/apple/Apple_remove/'\n",
+    "IMG_FILE = IMG_PATH+'FreshApple (1).jpg'\n",
     "\n",
     "# DEVICE 설정\n",
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'"
@@ -161,26 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 데이터 변형 및 전처리 (이미지 확인용)\n",
-    "transConvert = v2.Compose([\n",
-    "    v2.Resize(size=(120, 80)),\n",
-    "    v2.ToImage(),\n",
-    "    v2.ToDtype(torch.float32, scale=True)\n",
-    "])"
+    "# ## 데이터 변형 및 전처리 (이미지 확인용)\n",
+    "# transConvert = v2.Compose([\n",
+    "#     v2.Resize(size=(120, 80)),\n",
+    "#     v2.ToImage(),\n",
+    "#     v2.ToDtype(torch.float32, scale=True)\n",
+    "# ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 데이터셋 생성\n",
-    "imgDS=ImageFolder(root=IMG_PATH, transform=transConvert)"
+    "# ## 데이터셋 생성\n",
+    "# imgDS=ImageFolder(root=IMG_PATH, transform=transConvert)"
    ]
   },
   {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
    ],
    "source": [
     "## 데이터 변형 및 전처리\n",
-    "transConvert2 = v2.Compose([\n",
+    "transConvert = v2.Compose([\n",
     "    v2.Resize([256, 256]),\n",
     "    v2.RandomResizedCrop(224),\n",
     "    v2.ToTensor(),\n",
@@ -264,26 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## 이미지 데이터셋 생성\n",
-    "imgDS2=ImageFolder(root=IMG_PATH, transform=transConvert2)"
+    "imgDS=ImageFolder(root=IMG_PATH, transform=transConvert)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgDL2=DataLoader(imgDS2, batch_size=32)"
+    "## 이미지 데이터로더 생성\n",
+    "imgDL=DataLoader(imgDS, batch_size=32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -297,14 +298,14 @@
     }
    ],
    "source": [
-    "print(f'imgDS2.classes       : {imgDS2.classes}')\n",
-    "print(f'imgDS2.class_to_idx  : {imgDS2.class_to_idx}')\n",
-    "print(f'imgDS2.targets       : {imgDS2.targets}')"
+    "print(f'imgDS.classes       : {imgDS.classes}')\n",
+    "print(f'imgDS.class_to_idx  : {imgDS.class_to_idx}')\n",
+    "print(f'imgDS.targets       : {imgDS.targets}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,13 +315,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGG(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (3): ReLU(inplace=True)\n",
+      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (6): ReLU(inplace=True)\n",
+      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (8): ReLU(inplace=True)\n",
+      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace=True)\n",
+      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (13): ReLU(inplace=True)\n",
+      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (15): ReLU(inplace=True)\n",
+      "    (16): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (17): ReLU(inplace=True)\n",
+      "    (18): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (19): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (20): ReLU(inplace=True)\n",
+      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (22): ReLU(inplace=True)\n",
+      "    (23): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (24): ReLU(inplace=True)\n",
+      "    (25): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (26): ReLU(inplace=True)\n",
+      "    (27): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (29): ReLU(inplace=True)\n",
+      "    (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (31): ReLU(inplace=True)\n",
+      "    (32): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (33): ReLU(inplace=True)\n",
+      "    (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (35): ReLU(inplace=True)\n",
+      "    (36): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): Dropout(p=0.5, inplace=False)\n",
+      "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+      "    (4): ReLU(inplace=True)\n",
+      "    (5): Dropout(p=0.5, inplace=False)\n",
+      "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "=================================================================\n",
+       "Layer (type:depth-idx)                   Param #\n",
+       "=================================================================\n",
+       "VGG                                      --\n",
+       "├─Sequential: 1-1                        --\n",
+       "│    └─Conv2d: 2-1                       1,792\n",
+       "│    └─ReLU: 2-2                         --\n",
+       "│    └─Conv2d: 2-3                       36,928\n",
+       "│    └─ReLU: 2-4                         --\n",
+       "│    └─MaxPool2d: 2-5                    --\n",
+       "│    └─Conv2d: 2-6                       73,856\n",
+       "│    └─ReLU: 2-7                         --\n",
+       "│    └─Conv2d: 2-8                       147,584\n",
+       "│    └─ReLU: 2-9                         --\n",
+       "│    └─MaxPool2d: 2-10                   --\n",
+       "│    └─Conv2d: 2-11                      295,168\n",
+       "│    └─ReLU: 2-12                        --\n",
+       "│    └─Conv2d: 2-13                      590,080\n",
+       "│    └─ReLU: 2-14                        --\n",
+       "│    └─Conv2d: 2-15                      590,080\n",
+       "│    └─ReLU: 2-16                        --\n",
+       "│    └─Conv2d: 2-17                      590,080\n",
+       "│    └─ReLU: 2-18                        --\n",
+       "│    └─MaxPool2d: 2-19                   --\n",
+       "│    └─Conv2d: 2-20                      1,180,160\n",
+       "│    └─ReLU: 2-21                        --\n",
+       "│    └─Conv2d: 2-22                      2,359,808\n",
+       "│    └─ReLU: 2-23                        --\n",
+       "│    └─Conv2d: 2-24                      2,359,808\n",
+       "│    └─ReLU: 2-25                        --\n",
+       "│    └─Conv2d: 2-26                      2,359,808\n",
+       "│    └─ReLU: 2-27                        --\n",
+       "│    └─MaxPool2d: 2-28                   --\n",
+       "│    └─Conv2d: 2-29                      2,359,808\n",
+       "│    └─ReLU: 2-30                        --\n",
+       "│    └─Conv2d: 2-31                      2,359,808\n",
+       "│    └─ReLU: 2-32                        --\n",
+       "│    └─Conv2d: 2-33                      2,359,808\n",
+       "│    └─ReLU: 2-34                        --\n",
+       "│    └─Conv2d: 2-35                      2,359,808\n",
+       "│    └─ReLU: 2-36                        --\n",
+       "│    └─MaxPool2d: 2-37                   --\n",
+       "├─AdaptiveAvgPool2d: 1-2                 --\n",
+       "├─Sequential: 1-3                        --\n",
+       "│    └─Linear: 2-38                      102,764,544\n",
+       "│    └─ReLU: 2-39                        --\n",
+       "│    └─Dropout: 2-40                     --\n",
+       "│    └─Linear: 2-41                      16,781,312\n",
+       "│    └─ReLU: 2-42                        --\n",
+       "│    └─Dropout: 2-43                     --\n",
+       "│    └─Linear: 2-44                      4,097,000\n",
+       "=================================================================\n",
+       "Total params: 143,667,240\n",
+       "Trainable params: 143,667,240\n",
+       "Non-trainable params: 0\n",
+       "================================================================="
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### 모델 구조 확인 \n",
-    "# print(model)\n",
-    "# summary(model)"
+    "print(model)\n",
+    "summary(model)"
    ]
   },
   {
@@ -339,10 +463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### 사전학습 모델의 분류기 커스텀마이징\n",
     "model.classifier[6] = nn.Sequential(\n",
     "    nn.Linear(4096, 512),\n",
     "    nn.ReLU(),\n",
@@ -403,15 +528,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train, test 분리\n",
-    "\n",
     "# 모듈 로딩\n",
     "from torch.utils.data import random_split\n",
-    "trainDS, validDS, testDS = random_split(imgDS2, [round(len(imgDS2)*0.7),round(len(imgDS2)*0.2), round(len(imgDS2)*0.1)])"
+    "trainDS, validDS, testDS = random_split(imgDS, [round(len(imgDS)*0.7),round(len(imgDS)*0.2), round(len(imgDS)*0.1)])"
    ]
   },
   {
@@ -427,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +573,7 @@
     "loss_func = nn.CrossEntropyLoss()\n",
     "\n",
     "# 최적화 스케쥴링 인스턴스 생성 => lr 조절 및 성능 개선 여부 체크\n",
-    "scheduler = lr_scheduler.ReduceLROnPlateau(optimizer, mode='max', patience=10, verbose=True)\n"
+    "scheduler = lr_scheduler.ReduceLROnPlateau(optimizer, mode='max', patience=10, verbose=True)"
    ]
   },
   {
@@ -771,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
