--- a/10.Natural_Language_Processing/Project/first_check.ipynb
+++ b/10.Natural_Language_Processing/Project/first_check.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 모듈 로딩\n",
     "from urllib.request import Request\n",
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
@@ -14,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -68,6 +69,7 @@
     }
    ],
    "source": [
+    "# 크롤링 테스트\n",
     "temp_list=[]\n",
     "for idx in range(1, 10):\n",
     "    url = f'https://www.health.kr/researchInfo/disease_detail.asp?idx={idx}'\n",
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +176,7 @@
     }
    ],
    "source": [
-    "# temp_list = crawling(\"임신 및 출산 관련 질환\")\n",
+    "# 크롤링 진행\n",
     "temp_list = crawling(\"비뇨생식기계 질환\")"
    ]
   },
@@ -345,7 +347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "NLP_TORCH",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
