--- a/10.Natural_Language_Processing/Project/tokenize영훈.ipynb
+++ b/10.Natural_Language_Processing/Project/tokenize영훈.ipynb
@@ -42,12 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 데이터 준비\n",
-    "CSV='CSVpregnant.csv'\n",
     "CSV='CSVgenitourinary.csv'\n",
     "FILE_PATH='../Project/'\n",
     "\n",
@@ -76,10 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "text_list=''.join(texts).split('.')\n",
     "strip_texts=[]\n",
     "for text in text_list:\n",
     "    if len(text):\n",
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd.Series(strip_texts).to_csv('CSVgenitourinary(cleaning).csv', index=False, encoding='utf-8')"
+    "pd.Series(strip_texts).to_csv('CSVgenitourinary(cleaning).csv', index=False, encoding='utf-8')"
    ]
   },
   {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
     "                                                    target,\n",
     "                                                    test_size = 0.2,\n",
     "                                                    random_state = 42,\n",
-    "                                                    stratify = target )"
+    "                                                    stratify = target)"
    ]
   },
   {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1065,7 @@
     "        else:\n",
     "            token_freqs[token] += 1\n",
     "\n",
-    "# print(token_freqs)"
+    "print(token_freqs)"
    ]
   },
   {
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
