--- a/14.personal_project(final)2/plus_crawling.ipynb
+++ b/14.personal_project(final)2/plus_crawling.ipynb
@@ -2530,13 +2530,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 스마트스토어 qna 불러와서 텍스트 추출하기"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2556,7 +2549,7 @@
     "# 파일 불러오기\n",
     "fileDF = pd.read_excel(file)\n",
     "\n",
-    "for link in fileDF['링크'][:2]:\n",
+    "for link in fileDF['링크']:\n",
     "\n",
     "    # 사이트 진입\n",
     "    agent_option = webdriver.ChromeOptions()\n",
@@ -2671,14 +2664,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 스마트스토어 qna 불러와서 텍스트 추출하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 사용할 파일들\n",
-    "# file = './rawfile2.xlsx'\n",
-    "# textfile = './textfile2.xlsx'\n",
+    "# 사용할 파일\n",
+    "file = './rawfile.xlsx'\n",
     "\n",
     "# 엑셀 파일 읽기\n",
     "fileDF = pd.read_excel(file)\n",
