--- a/schedule.ipynb
+++ b/schedule.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,11 +113,16 @@
       "2초마다 알려줄게요\n",
       "스케쥴 실행중...\n",
       "2초마다 알려줄게요\n",
-      "스케쥴 실행중...\n",
-      "스케쥴 실행중...\n",
       "2초마다 알려줄게요\n",
       "스케쥴 실행중...\n",
       "스케쥴 실행중...\n",
+      "2초마다 알려줄게요\n",
+      "2초마다 알려줄게요\n",
+      "스케쥴 실행중...\n",
+      "스케쥴 실행중...\n",
+      "2초마다 알려줄게요\n",
+      "2초마다 알려줄게요\n",
+      "2초마다 알려줄게요\n",
       "2초마다 알려줄게요\n",
       "2초마다 알려줄게요\n",
       "2초마다 알려줄게요\n",
@@ -132,7 +137,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 34\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     33\u001b[0m     schedule\u001b[38;5;241m.\u001b[39mrun_pending()\n\u001b[1;32m---> 34\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     36\u001b[0m     count \u001b[38;5;241m=\u001b[39m count \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m5\u001b[39m:\n",
+      "Cell \u001b[1;32mIn[3], line 34\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     33\u001b[0m     schedule\u001b[38;5;241m.\u001b[39mrun_pending()\n\u001b[1;32m---> 34\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     36\u001b[0m     count \u001b[38;5;241m=\u001b[39m count \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     38\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m5\u001b[39m:\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -165,7 +170,7 @@
     "\n",
     "# 주기 설정\n",
     "job1 = schedule.every(1).seconds.do(message1)\n",
-    "# job2 = schedule.every(2).seconds.do(message2,'2초마다 알려줄게요')\n",
+    "job2 = schedule.every(2).seconds.do(message2,'2초마다 알려줄게요')\n",
     "\n",
     "count = 0\n",
     "while True:\n",
